@@ -1,4 +1,5 @@
 November-2015 - 0.9.2.2
+- Translations are now working properly in Windows & OSX.
 - New translation: Catalan by EA3NM (Thank you!).
 - Ported from Qt4 to Qt5.
 - BugFix: Aether ADIF files could not be properly imported. (TNX AA5VU).
